--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,5 +9,8 @@
     "resolveJsonModule": true,
     "strict": true,
     "skipLibCheck": true,
-  }
+    "types":["jest","node"],
+  },
+  "include": ["src/**/*.ts", "tests/employeeContoller.test.ts", "tests/authController.test.ts"],
+  "exclude": ["node_modules", "dist"]
 }
